# draft-analyzer-be

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt  seed_data.py  settings.json
docker/local/: Dockerfile  docker-compose.yml
requirements/: ai_requirements.in  dev_requirements.in  requirements.in
src/civis_backend_policy_analyser/alembic/: env.py
src/civis_backend_policy_analyser/alembic/versions/: 33a934871736_initial_schema_migration.py  59bca9c706fe_initial_schema_migration.py  70cab13bfe48_initial_schema_migration.py  720e1647ed9b_document_summary_table_added.py  7b6a0ccab7f6_initial_schema_migration.py  92acc645abec_all_schema_generated.py  b0393b1cc1c5_initial_schema_migration.py  ba2202fafd53_initial_schema_migration.py  bcb3248644bf_document_summary_table_added.py  fcfd13698bb7_initial_schema_migration.py
src/civis_backend_policy_analyser/api/: app.py  document_metadata_router.py  document_score.py  document_score_router.py  document_summary_router.py  document_validate_router.py  executive_summary_router.py  history_router.py  report_generator_router.py
src/civis_backend_policy_analyser/config/: logging_config.py
src/civis_backend_policy_analyser/core/: __init__.py  db_connection.py  document_agent.py  document_agent_factory.py  model.py  vector_db_store.py
src/civis_backend_policy_analyser/core/agent/: document_chunker.py  summarizer.py  vector_store.py
src/civis_backend_policy_analyser/core/embeddings/: azure_embedding.py  base_embedding.py  ollama_embedding.py
src/civis_backend_policy_analyser/core/extractor/: document_extractor.py  docx_extractor.py  pdf_extractor.py  txt_extractor.py
src/civis_backend_policy_analyser/core/llm/: azure_llm.py  base_llm.py  ollama_llm.py
src/civis_backend_policy_analyser/models/: __init__.py  assessment_area.py  assessment_area_prompt.py  assessment_area_summary.py  document_metadata.py  document_score.py  document_summary.py  document_type.py  document_type_assessment_area.py  evaluation_status.py  prompt.py  prompt_score.py
src/civis_backend_policy_analyser/report/: generate_report.py
src/civis_backend_policy_analyser/schemas/: assessment_area_prompt_schema.py  assessment_area_schema.py  assessment_area_summary_schema.py  document_metadata_schema.py  document_report_schema.py  document_score_schema.py  document_summary_schema.py  document_type_schema.py  executive_summary_schema.py  history_schema.py  prompt_schema.py  prompt_score_schema.py
src/civis_backend_policy_analyser/utils/: constants.py  utils.py
src/civis_backend_policy_analyser/views/: assessment_area_prompt_view.py  assessment_area_summary_view.py  assessment_area_view.py  base_view.py  dcoument_score_view.py  document_metadata_view.py  document_report_view.py  document_summary_view.py  document_type_view.py  document_validate_view.py  executive_summary_view.py  history_view.py  prompt_score_evaluation_view.py  prompt_score_view.py
templates/: assessment_template.html  base_template.html  cover_template.html
