[project]
name = "CIVISAIPolicyAnalyserBackend"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "fastapi-cli>=0.0.7",
    "fastapi-sqlalchemy>=0.2.1",
    "greenlet>=3.2.3",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
]

[tool.ruff.lint]
ignore-init-module-imports = false
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
ignore = [
    "E501"  # Line is Too Long
]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Assume Python >3.9
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"

[dependency-groups]
ai = [
    "langchain>=0.3.26",
    "langchain-postgres>=0.0.14",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.9",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
]
test = [
    "coverage>=7.9.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
detect-same-package = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
"src/civis_backend_policy_analyser/alembic/*" = ["UP035", "I001", "UP007"]
