[project]
name = "CIVISAIPolicyAnalyserBackend"
version = "1.0.0"
description = "Backend for draft summarization and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.1",
    "fastapi-cli>=0.0.7",
    "fastapi-sqlalchemy>=0.2.1",
    "greenlet>=3.2.3",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.21",
    "langchain-postgres>=0.0.14",
    "langchain-openai>=0.1.8",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.9",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "lxml>=6.0.0", # is yanked needs upgrade
    "python-docx>=1.2.0",
    "weasyprint>=60.0",
    "jinja2>=3.0",
    "beautifulsoup4>=4.13.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "coverage>=7.4.0",
    "ruff>=0.4.4"
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".venv", "__pycache__", "build", "dist", ".mypy_cache", ".ruff_cache", "node_modules"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
case-sensitive = true
detect-same-package = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
"alembic/*" = ["UP035", "I001", "UP007"]
